--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-virtualenv==20.16.2
-mlflow==1.27.0
+mlflow==1.3.0
+protobuf==3.20.0
+scikit-learn==1.0.2
+optuna==3.0.0
+jupyterlab==3.4.4
+seaborn==0.12.0
+plotly==5.9.0
+ipywidgets==7.7.2
